[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-privacy-auditor"
version = "1.0.0"
description = "RL environment for automated data privacy and integrity auditing"
authors = [
    {name = "Arpit Pandey"},
    {name = "Rishabh Mishra"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv"
]

[project.scripts]
# The validator looks for this EXACT header and key
data-privacy-auditor-server = "server.app:main"

[tool.setuptools]
packages = ["server"]